apps/ingress/headlamp-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: headlamp
  namespace: headlamp
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`headlamp.aws.homelain.click`)
      kind: Rule
      services:
        - name: headlamp
          port: 80
  tls: {}
